Change List.of to Arrays.asList because java library designers are weird people