@@ -3,6 +3,7 @@ package com.exasol.adapter.sql;
 import com.exasol.adapter.AdapterException;
 import com.exasol.errorreporting.ExaError;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -178,5 +179,5 @@ public class SqlFunctionAggregateGroupConcat extends SqlNode {
     }
 
     @Override
-    public List<SqlNode> getChildren() { return List.of(this.argument); }
+    public List<SqlNode> getChildren() { return Arrays.asList(this.argument); }
 }
