@@ -2,6 +2,7 @@ package com.exasol.adapter.sql;
 
 import com.exasol.adapter.AdapterException;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -52,7 +53,7 @@ public class SqlFunctionScalarExtract extends SqlNode {
     }
 
     @Override
-    public List<SqlNode> getChildren() { return List.of(this.argument); }
+    public List<SqlNode> getChildren() { return Arrays.asList(this.argument); }
 
     /**
      * List of available parameters for the EXTRACT function.
