@@ -2,6 +2,7 @@ package com.exasol.adapter.sql;
 
 import com.exasol.adapter.AdapterException;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -43,6 +44,6 @@ public class SqlPredicateIsNotNull extends SqlPredicate {
     }
 
     @Override
-    public List<SqlNode> getChildren() { return List.of(this.expression); }
+    public List<SqlNode> getChildren() { return Arrays.asList(this.expression); }
 
 }
