@@ -2,6 +2,7 @@ package com.exasol.adapter.sql;
 
 import com.exasol.adapter.AdapterException;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -83,5 +84,5 @@ public class SqlPredicateLike extends SqlPredicate {
     }
 
     @Override
-    public List<SqlNode> getChildren() { return List.of(this.left, this.pattern, this.escapeChar); }
+    public List<SqlNode> getChildren() { return Arrays.asList(this.left, this.pattern, this.escapeChar); }
 }
